@@ -178,6 +178,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
       lazy_canonical_path.
     - deduplicate.sh: remove a bit of noisy debug output, but turn on
       parse_otool_output debugging.
+    - deduplicate.sh: fix wrong return value capture. We want to check the
+      return value of the executed function/command, not that of "typeset".
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
